datadir=@PKGDOCDIR@/examples/topology

nobase_data_DATA=\
	README \
	conncomp.py \
	conncon_sources.py \
	conncon_targets.py \
	connex.py \
	connex_ew.py \
	ctx_2n.py \
	gaussex.py \
	grid_iaf.py \
	grid_iaf_irr.py \
	grid_iaf_oc.py \
	hill_tononi_Vp.py \
	test_3d.py \
	test_3d_exp.py \
	test_3d_gauss.py
